--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -1,40 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Lets Gooo !!{% endblock %}
+{% block title %}Blog-Article{% endblock %}
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-md-4 mt-2 text-center">
+<div class="container">
+    <div class="row d-flex justify-content-around align-items-center">
+        <div class="col-md-6 mt-2 text-center">
     
             <p class="h4">{{ posts.title }}  </p>       
             
-            <img  src="{{ posts.image }}" class="rounded mx-auto " width="300">    
+            <img  src="{{ posts.image }}" class="rounded mx-auto " width="300"> 
+               
             <p class="small">Ecrite par : {{ posts.Author.firstname }} {{ posts.Author.lastname }}</p>
-            <p>{{ posts.body }}</p>
+            <p>{{ posts.body|nl2br }}</p>
             
             <hr>
-            <p class="text-light bg-dark">Reviews</p>
-            {% for review in posts.review %}
-            <p>{{ review.username }} : <span class="font-italic">{{ review.body}}</span> </p> 
-            {% endfor %}
 
-            <a href="{{ path('home') }}" class="btn btn-primary">Accueil</a>
-
-       
-        </div>
-        <form action="{{ path('addreview')}}" method="POST" class="col-md-3 align-self-end">            
+         <form action="{{ path('addreview')}}" method="POST">            
             <div class="form-group">
                 <label for="pseudo-form">Pseudo</label>
                 <input type="text" class="form-control" id="pseudo-form" name="pseudo" placeholder="Pseudo">
                 <label for="reviews-form">Reviews</label>
                 <input type="text" class="form-control" id="reviews-form" name="review" placeholder="Ajouter une critique...">
-                <input type="hidden" name="post-id" value="{{ posts.id }}"> {# j 'envoie l 'id du post yes #} 
+                <input type="hidden" name="post-id" value="{{ posts.id }}">
                 <button type="submit" class="btn btn-primary mt-2">Envoyer</button>
             </div>
-        </form>
+        </form>   
        
+        </div>
+       
+        <div class="col-md-5 align-self-start mt-5 text-center">
+                <p class="h4 font-weight-bolder">Reviews</p>
+                <hr>
+                {% if posts.review|length == 0 %}
+                    <p>Il y a aucun commentaire sur ce post ..</p>
+                {% endif %}
+                {% for review in posts.review %}
+                <p> <span class="date mr-2">à {{review.createdAt|date('G:i')}}</span><span class="font-weight-bolder"> {{ review.username }} : </span><span class="font-italic">{{ review.body}}</span> </p> 
+                {% endfor %}
+
+                <a href="{{ path('home') }}" class="btn btn-primary">Accueil</a>
+        </div>
     </div>
 </div>
 {% endblock %}
