--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,10 +21,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">                    
+                    <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{{ path('home')}}">Home</a>                     
                     <a class="nav-item nav-link" href="{{ path('author')}}">Nos auteurs</a>                    
                     <a class="nav-item nav-link" href="{{ path('addpost') }}">Créer un post</a>
-                    <a class="nav-item nav-link btn btn-outline-success my-2 my-sm-0 ml-5" href="{{ path('subscribe') }}">S'inscrire</a>
+                    <a class="nav-item nav-link" href="{{ path('subscribe') }}">S'inscrire</a>
 
                     </div>
                 </div>
