--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,27 +16,36 @@
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
-                <a class="navbar-brand" href="{{ path('home') }}"><img src="{{ asset('images/blogger-logo.svg')}}" height="30"></a>
+                <a class="navbar-brand" href="{{ path('home') }}"><img src="{{ asset('images/blogger-logo.svg')}}" height="50" title="Retour accueil"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{{ path('home')}}">Home</a>                     
-                    <a class="nav-item nav-link" href="{{ path('author')}}">Nos auteurs</a>                    
-                    <a class="nav-item nav-link" href="{{ path('addpost') }}">Créer un post</a>
-                    <a class="nav-item nav-link" href="{{ path('subscribe') }}">S'inscrire</a>
-
+                        <a class="nav-item nav-link" href="{{ path('home')}}">Accueil</a>                                         
+                        <a class="nav-item nav-link" href="{{ path('addpost') }}">Créer un post</a>                        
+                        {% if app.user %}                        
+                        <a class="nav-item nav-link" href="{{ path('logout') }}">Se deconnecter</a>
+                        {% if app.user.email == "yakhoui.z@gmail.com" or "coco@gmail.com" %}
+                        <a class="nav-item nav-link" href="{{ path('addfakepost') }}">Génerateur de fake</a>
+                        {% endif %}
+                        
+                        {% else %}                                               
+                        <a class="nav-item nav-link" href="{{ path('login') }}">Se connecter</a>
+                        {% endif %}                                            
                     </div>
-                </div>
+                </div>                
             </nav>
 
             
 
             {% block body %}{% endblock %}
         </div>
+       
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
         </script>
+        <script src="{{ asset('js/jquery-3.4.1.min.js') }}"></script>
+        <script src="{{ asset('js/app.js') }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
         </script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
