--- a/templates/main/subscribe.html.twig
+++ b/templates/main/subscribe.html.twig
@@ -1,18 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Blog-{% endblock %}
-
+{% form_theme formRegister 'bootstrap_4_layout.html.twig' %}
 {% block body %}
-    <div class="col-md-6 p-5">
-        <form action="{{ path('addauthor')}}" method="POST" >            
-            <div class="form-group">
-                <label for="prenom">Prénom</label>
-                <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Votre prénom">
-                <label for="nom">nom</label>
-                <input type="text" class="form-control" id="nom" name="nom" placeholder="Nom de famille">
-                <input type="hidden" name="post-id" value="">
-                <button type="submit" class="btn btn-primary mt-4">S'ajouter auteur</button>
-            </div>
-        </form>
+
+    <div class="row">
+        <div class="col-md-4 mt-5">
+            <p class="h5"><u>Formulaire d'inscription</u></p>
+            {{ form_start(formRegister) }}
+            {{ form_row(formRegister.firstname, {'label' :'Prenom'}) }}
+            {{ form_row(formRegister.lastname, {'label' :'Nom'}) }}
+            {{ form_row(formRegister.password, {'label' :'Mot de passe'}) }}
+            {{ form_row(formRegister.confirm_password, {'label' :'Confirmez le mot de passe'}) }}
+            {{ form_widget(formRegister) }}             
+            <button type="submit" class="btn btn-success">S'inscrire !</button>
+            {{ form_end(formRegister) }}
+        </div>
     </div>
+    
 {% endblock %}
