--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="container">
-    <div class="row d-flex justify-content-around align-items-center mt-3">
+    <div class="row d-flex justify-content-around align-items-start mt-3">
         <div class="col-md-8 mt-2 text-center">
             
             <p class="h4 font-weight-bolder">{{ posts.title }}</p>       
@@ -13,7 +13,7 @@
             <img  src="{{ posts.image }}" class="rounded mx-auto img-fluid"> 
              <div class="d-flex justify-content-between align-items-center mt-2 px-4">
                <p class="small text-left">Ecrit par : {{ posts.user.firstname }} {{ posts.user.lastname }}</p>               
-               <p id="like"  class="like"><img src="{{ asset('images/'~like~'.svg') }}" title=""  width="25"><span id="nbLike">{{ posts.nbLike }}</span></p>
+               <p id="like"  class="like"><img src="{{ asset('images/'~like~'.svg') }}" title=""  width="25"><span id="nbLike"> {{ posts.nbLike }}</span></p>
              </div>              
              <hr>
             <p class="text-left h6 font-weight-bolder"><u>{{ posts.title }}</u></p>
@@ -25,12 +25,14 @@
        
         <div class="col-md-4 align-self-start mt-5 text-center"> 
 
-            <p class="h4 font-weight-bolder">Reviews</p>
-            <hr>
+            <img class="img-fluid rounded opacity" src="https://images.unsplash.com/photo-1471107340929-a87cd0f5b5f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
-            <form action="{{ path('addreview')}}" method="POST">            
-                <div class="form-group">                    
-                    <label for="reviews-form">Reviews</label>
+           
+           
+
+            <form action="{{ path('addreview')}}" method="POST" >            
+                <div class="form-group mt-3">                    
+                    <label for="reviews-form">Ajouter une note</label>
                     <input type="text" class="form-control" id="reviews-form" name="review" placeholder="Ajouter une critique...">
                     <input type="hidden" name="post-id" value="{{ posts.id }}">
                     <button type="submit" class="btn btn-primary mt-5">Envoyer</button>
